fixed past pools not showing

--- a/src/views/Dapp/Components/StakingTable/stakingtable.styles.scss
+++ b/src/views/Dapp/Components/StakingTable/stakingtable.styles.scss
@@ -27,7 +27,7 @@
 		}
 
 		.table__header {
-			background: linear-gradient(180deg, rgba(51, 47, 103, 0.10194) 2.1%, rgba(61, 60, 125, 0.0922917) 98.26%);
+			background: #e3f9ff;
 			width: 100%;
 			position: sticky;
 			top: 0;
@@ -101,7 +101,7 @@
 						color: #e3507a;
 
 						&.no__withdraw {
-							color: #fff;
+							color: #34508f;
 							text-decoration: none;
 							cursor: not-allowed;
 						}
